# PicoOSC

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
include/PicoOSC/: OSCClient.hpp  OSCMessage.hpp  OSCMessageParser.hpp  OSCServer.hpp  OSC_utils.hpp  PicoOSC.hpp
